[package]
name = "ipynb"
version = "0.0.1"
edition = "2021"
authors = ["Matthias Bussonnier <bussonniermatthias@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Carreau/ipynb-rs"
description = "Attempt at providing canonical structs to read/write Jupyter `.ipynb` (notebooks) files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.34.0"}
serde = {version="1.0.131", features = ["derive"]}
serde_json = "1.0.73"
